--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,3 +9,4 @@
 @import 'components/contacto.scss';
 @import 'components/footer.scss';
 @import 'components/huerta.scss';
+@import 'base/mixin.scss';
